@@ -2,7 +2,7 @@
 \label{sec:format}
 
 VIPS has a simple system for adding support for new image file formats. 
-You can ask VIPS to find a format to load a file with,
+You can ask VIPS to find a format to load a file with
 or to select a image file writer based on a filename. Convenience functions
 copy a file to an \verb+IMAGE+, or an \verb+IMAGE+ to a file. New formats may
 be added to VIPS by simply defining a new subclass of \verb+VipsFormat+.
@@ -42,20 +42,23 @@ version is one indicating that the file can be opened lazily
 
 \end{itemize}
 
-\subsection{The format table}
+A switch to the \verb+vips+ command-line program is handy for listing the
+supported formats. Try:
+
+\begin{verbatim}
+vips --list classes
+\end{verbatim}
+
+\noindent
+And look for subclasses of \verb+VipsFormat+.
+
+\subsection{The format class}
 
 The interface to the format system is defined by the abstract base class
 \verb+VipsFormat+. Formats subclass this and implement some or all of the
 methods. Any of the functions may be left NULL and VIPS will try to make do 
 with what you do supply. Of course a format with all functions as NULL will 
 not be very useful.
-
-A switch to the \verb+vips+ command-line program is handy for listing the
-supported formats. Try:
-
-\begin{verbatim}
-vips --list formats
-\end{verbatim}
 
 As an example, \fref{fg:newformat} shows how to register a new format in a
 plugin.
@@ -82,7 +85,7 @@ typedef VipsFormat VipsFormatMyformat;
 typedef VipsFormatClass VipsFormatMyformatClass;
 
 static void
-vips_format_myformat_class_init( VipsFormatVipsClass *class )
+vips_format_myformat_class_init( VipsFormatMyformatClass *class )
 {
   VipsObjectClass *object_class = (VipsObjectClass *) class;
   VipsFormatClass *format_class = (VipsFormatClass *) class;
@@ -100,17 +103,17 @@ vips_format_myformat_class_init( VipsFormatVipsClass *class )
 }
 
 static void
-vips_format_vips_init( VipsFormatVips *object )
+vips_format_myformat_init( VipsFormatMyformat *object )
 {
 }
 
-G_DEFINE_TYPE( VipsFormatVips, vips_format_vips, VIPS_TYPE_FORMAT );
+G_DEFINE_TYPE( VipsFormatMyformat, vips_format_myformat, VIPS_TYPE_FORMAT );
 
 char *
 g_module_check_init( GModule *self )
 {
   // register the type
-  vips_format_vips_get_type(); 
+  vips_format_myformat_get_type(); 
 }
 \end{verbatim}
 \caption{Registering a format in a plugin}
@@ -119,14 +122,15 @@ g_module_check_init( GModule *self )
 
 \subsection{Finding a format}
 
-You can loop over the format table in order with \verb+vips_format_map()+. Like
-all the map functions in VIPS, this take a function and applies it to every
-element in the table until it returns non-zero, or until the table ends. 
+You can loop over the subclasses of \verb+VipsFormat+ in order of priority
+with \verb+vips_format_map()+. Like all the map functions in VIPS, this take
+a function and applies it to every element in the table until the function
+returns non-zero or until the table ends.
 
 You find an \verb+VipsFormatClass+ to use to open a file with
-\verb+vips_format_for_file()+. This searches the type system and returns
-the first format whose test function returns true, setting an error message
-and returning NULL if no format is found.
+\verb+vips_format_for_file()+. This finds the first format whose \verb+is_a()+
+function returns true or whose suffix list matches the suffix of the filename,
+setting an error message and returning NULL if no format is found.
 
 You find a format to write a file with \verb+vips_format_for_name()+. This
 returns the first format with a save function whose suffix list matches the
