@@ -73,6 +73,7 @@ This manual formatted \today
 \input{iosys}
 \input{func}
 \input{format}
+\input{interpolate}
 
 \chapter{Writing VIPS operations}
 
